# resume-fit

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: analyses.py  auth.py  jobs.py  resumes.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: analysis.py  job.py  resume.py  user.py
backend/app/schemas/: analysis.py  job.py  resume.py  user.py
backend/app/services/: llm_client.py  pdf_service.py  scoring_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/unit/: test_scoring.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/pages/: AnalysisResult.tsx  Home.tsx
frontend/src/types/: index.ts
