[tool.poetry]
name = "resumefit-backend"
version = "0.1.0"
description = "ResumeFit AI Backend"
authors = ["ResumeFit AI Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.7"
redis = "^5.0.1"
celery = "^5.3.6"
pdfplumber = "^0.10.3"
openai = "^1.10.0"
google-generativeai = "^0.3.2"
rapidfuzz = "^3.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
httpx = "^0.26.0"
black = "^24.1.1"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
